<resources>
    <string name="app_name">ScheduleApp</string>
    <string name="schedule">Расписание</string>
    <string name="profile">Профиль</string>
    <string name="time">Время</string>
    <string name="subject">Предмет</string>
    <string name="place">Место</string>
    <string name="educator">Преподаватель</string>
    <string name="weekday">День недели</string>
    <string name="order">Порядок</string>
    <string name="guest">Гость</string>
    <string name="password">Пароль</string>
    <string name="login">Почта</string>
    <string name="authorization">Вход</string>
</resources>